[gd_scene load_steps=6 format=3 uid="uid://q80g1s5p6aln"]

[ext_resource type="Script" uid="uid://dsf7hlfohayn3" path="res://Scripts/Jugador/Habilidades Modulares/Ataque Mele/Bate de Beisboll/Bate Beisboll.gd" id="1_0yxwd"]
[ext_resource type="PackedScene" uid="uid://c2sirg4no04bb" path="res://Scenes/Habilidades Modulares/Dash/Dash Normal.tscn" id="2_77l2q"]
[ext_resource type="Script" uid="uid://bq3hguf0dhuk6" path="res://Scripts/Jugador/Habilidades Modulares/Ataque Mele/Bate de Beisboll/Maquina Bate.gd" id="3_77l2q"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_0yxwd"]
size = Vector2(2, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_77l2q"]
size = Vector2(48, 40)

[node name="Bate Beisboll" type="Node2D" node_paths=PackedStringArray("ArmaStateMachine", "DashNode")]
script = ExtResource("1_0yxwd")
Fuerza = 75.0
cooldown = 0.5
TiempoGolpe = 0.2
TieneAtaqueFuerte = true
MultiplicadorFuerza = 2.0
tiempo_ataque_fuerte = 1.0
Congela = true
tiempo_congelacion = 0.3
TiempoGolpeFuerte = 0.2
ArmaStateMachine = NodePath("StateMachine")
DashNode = NodePath("Dash")
metadata/_custom_type_script = "uid://cw1nwm06uvyrq"

[node name="Dash" parent="." instance=ExtResource("2_77l2q")]
TiempoDeRecarga = 6.0
TiempoDeDash = 0.4
distancia_maxima = 130.0
Velocidad = 1500.0

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_77l2q")
PhysicsStates = Dictionary[String, NodePath]({
"Ataque": NodePath("."),
"Ataque Fuerte": NodePath("."),
"Manteniendo Ataque": NodePath("."),
"Sin Ataque": NodePath(".")
})
metadata/_custom_type_script = "uid://ci1ayib00djei"

[node name="Timer Fuerza" type="Timer" parent="."]
one_shot = true

[node name="Timer Cooldown" type="Timer" parent="."]
one_shot = true

[node name="Timer Congelacion" type="Timer" parent="."]
one_shot = true
ignore_time_scale = true

[node name="Timer Golpe" type="Timer" parent="."]
one_shot = true

[node name="Pivot Bate" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Pivot Bate"]
position = Vector2(40, 1)
scale = Vector2(23, 19)
texture = SubResource("PlaceholderTexture2D_0yxwd")

[node name="Area2D" type="Area2D" parent="Pivot Bate"]
position = Vector2(41, 1)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot Bate/Area2D"]
shape = SubResource("RectangleShape2D_77l2q")
disabled = true

[connection signal="timeout" from="Timer Fuerza" to="StateMachine" method="_TimerFuerza_Timeout"]
[connection signal="timeout" from="Timer Cooldown" to="StateMachine" method="_TimerCooldown_Timeout"]
[connection signal="timeout" from="Timer Congelacion" to="StateMachine" method="_TimerCongelacion_Timeout"]
[connection signal="timeout" from="Timer Golpe" to="StateMachine" method="_TimerGolpe_Timeout"]
[connection signal="body_entered" from="Pivot Bate/Area2D" to="StateMachine" method="_Area2D_bodyEntered"]
